[package]
name = "dnd_board_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.30"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] }
eframe = "0.30"
serde = { version = "1.0", features = ["derive"]}
serde_json ={ version = "1.0", default-features = false, features = ["alloc"]}
